Angular, Material Boilerplate app

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "fonts";
+
+
+body { margin: 0; font-family: $font_family, sans-serif; }
