toggle-able side drawer from tool-bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,19 @@
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button mat-icon-button aria-label="menu icon" (click)="drawer.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <span>ng-mat App</span>
+  <span class="spacer"></span>
+  <button mat-icon-button class="favorite-icon" aria-label="heart icon">
     <mat-icon>favorite</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  <button mat-icon-button aria-label="share icon">
     <mat-icon>share</mat-icon>
   </button>
 </mat-toolbar>
 <mat-drawer-container class="side-container" [hasBackdrop]="false">
-  <mat-drawer #drawer mode="side" opened>Drawer content Drawer content</mat-drawer>
+    <mat-drawer #drawer mode="side" opened>Drawer content (Toggled)</mat-drawer>
   <mat-drawer-content>
-    <button mat-raised-button (click)="drawer.toggle()">Toggle drawer</button>
     <router-outlet />
   </mat-drawer-content>
 </mat-drawer-container>
