--- a/src/app/group-by/group-by.component.html
+++ b/src/app/group-by/group-by.component.html
@@ -1,6 +1,17 @@
-<div style="margin-top: 1rem;"></div>
-<mat-grid-list cols="4" rowHeight="6:4" gutterSize="1rem" style="margin-left: 1rem; margin-right:1rem;">
-  <mat-grid-tile>1</mat-grid-tile>
+<div style="margin-top: 1rem"></div>
+<mat-grid-list
+  cols="4"
+  rowHeight="6:4"
+  gutterSize="1rem"
+  style="margin-left: 1rem; margin-right: 1rem"
+>
+  <mat-grid-tile>
+    <mat-list role="list">
+      <mat-list-item role="listitem">Item 1</mat-list-item>
+      <mat-list-item role="listitem">Item 2</mat-list-item>
+      <mat-list-item role="listitem">Item 3</mat-list-item>
+    </mat-list>
+  </mat-grid-tile>
   <mat-grid-tile>2</mat-grid-tile>
   <mat-grid-tile>3</mat-grid-tile>
   <mat-grid-tile>4</mat-grid-tile>
