--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 @import "fonts";
 
-
-body { margin: 0; font-family: $font_family, sans-serif; }
+body {
+  margin: 0;
+  font-family: $font_family, sans-serif;
+}
+html {
+  --mat-toolbar-title-text-font: $font_family, sans-serif !important;
+  //--mdc-list-list-item-one-line-container-height: 0 !important;
+}
