--- a/src/app/group-by/group-by.component.scss
+++ b/src/app/group-by/group-by.component.scss
@@ -1,6 +1,6 @@
 mat-grid-tile {
-  background: lightblue;
-  border-radius: 0.375rem;
+  background: #fff !important;
+  //border-radius: 0.375rem;
 }
 
 ::ng-deep .mdc-list-item__primary-text {
