--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,26 @@
-.side-container {
-  width: 100%;
-  height: 100vh;
-}
+.header {
+  display: flex;
+  position: sticky !important;
+  justify-content: space-between;
 
-.spacer {
-  flex: 1 1 auto;
+  ::ng-deep .mdc-line-ripple {
+    display: none;
+  }
+
+  ::ng-deep .mat-mdc-select-trigger {
+    width: 30% !important;
+    margin-left: 30px !important;
+    margin-top: 10px;
+  }
+
+  ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    margin: 0 20px !important;
+    &:hover {
+      background-color: #fff !important;
+    }
+  }
+
+  ::ng-deep .mat-mdc-option .mdc-list-item {
+    font-size: small;
+  }
 }
