--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 .header {
-  display: flex;
-  justify-content: space-between;
+  //display: flex;
+  //justify-content: space-between;
+  position: sticky;
+  position: -webkit-sticky; /* For macOS/iOS Safari */
+  top: 0; /* Sets the sticky toolbar to be on top */
+  z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
 
   ::ng-deep .mdc-line-ripple {
     display: none;
@@ -17,5 +21,9 @@
 
   ::ng-deep .mdc-text-field--filled {
     margin-top: 15px;
+  }
+
+  .spacer {
+    flex: 1 1 auto;
   }
 }
