--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,19 +8,7 @@
   }
 
   ::ng-deep .mat-mdc-select-trigger {
-    width: 30% !important;
-    margin-left: 30px !important;
-    margin-top: 10px;
-  }
-
-  ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    margin: 0 20px !important;
-    &:hover {
-      background-color: #fff !important;
-    }
-  }
-
-  ::ng-deep .mat-mdc-option .mdc-list-item {
-    font-size: small;
+    vertical-align: middle;
+    margin-top: 15px;
   }
 }
