--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,15 @@
     <button mat-menu-item>Mammals</button>
   </mat-menu>
   <span class="spacer"></span>
+  <section class="example-section">
+    <mat-slide-toggle
+        class="example-margin"
+        [color]="color"
+        [checked]="checked"
+        [disabled]="disabled">
+      Slide me!
+    </mat-slide-toggle>
+  </section>
   <button mat-icon-button aria-label="user icon">
     <mat-icon>account_circle</mat-icon>
   </button>
